--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  height: 10vh;
+  height: 30vh;
+  padding: 1rem;
   align-items: center;
   gap: 1rem;
   
